<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_inicio"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_albums"
            android:icon="@drawable/ic_menu_album"
            android:title="@string/menu_albums" />
        <item
            android:id="@+id/nav_collectors"
            android:icon="@drawable/ic_menu_collector"
            android:title="@string/menu_collectors"/>
        <item
            android:id="@+id/nav_musicians"
            android:icon="@drawable/ic_menu_musician"
            android:title="@string/menu_musicians" />
    </group>
</menu>