...
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                    <TextView
                        android:id="@+id/first_line"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:ellipsize="marquee"
                        android:fontFamily="sans-serif"
                        android:singleLine="true"
...
