...
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_name_track"
                android:fontFamily="sans-serif"
                android:inputType="text"
                app:errorEnabled="true"
...
